@@ -154,8 +154,12 @@ const uint32_t kSceneFade = 0xFADEFADE;
 -(void) onEnter
 {
 	[super onEnter];
+	
+	// outScene_ should not receive the onExit callback
+	// only the onExitTransitionDidStart
+	[outScene_ onExitTransitionDidStart];
+	
 	[inScene_ onEnter];
-	// outScene_ should not receive the onEnter callback
 }
 
 // custom onExit
@@ -164,7 +168,7 @@ const uint32_t kSceneFade = 0xFADEFADE;
 	[super onExit];
 	[outScene_ onExit];
 
-	// inScene_ should not receive the onExit callback
+	// inScene_ should not receive the onEnter callback
 	// only the onEnterTransitionDidFinish
 	[inScene_ onEnterTransitionDidFinish];
 }
